--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
-{% set version = "0.5.0" %}
-
+{% set version = '0.5.0' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -8,24 +7,24 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: merTools_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/merTools_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/merTools/merTools_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/merTools_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/merTools/merTools_{{ version }}.tar.gz
   sha256: 99110248bf135189db06d012f6f493c04f250527a3022a3a406dc353ac1d0ea7
 
 build:
-  noarch: generic
+  merge_build_host: True  # [win]
   number: 0
-
+  noarch: generic
   rpaths:
     - lib/R/lib/
     - lib/
 
 requirements:
   build:
+    - {{posix}}zip               # [win]
+  host:
     - r-base
-    - r-dt
     - r-abind
     - r-arm
     - r-blme
@@ -36,10 +35,8 @@ requirements:
     - r-lme4 >=1.1_11
     - r-mvtnorm
     - r-shiny
-
   run:
     - r-base
-    - r-dt
     - r-abind
     - r-arm
     - r-blme
@@ -53,7 +50,7 @@ requirements:
 
 test:
   commands:
-    - $R -e "library('merTools')"  # [not win]
+    - $R -e "library('merTools')"           # [not win]
     - "\"%R%\" -e \"library('merTools')\""  # [win]
 
 about:
@@ -63,13 +60,30 @@ about:
     'lme4' package. Allows construction of prediction intervals efficiently from large
     scale linear and generalized linear mixed-effects models.
   license_family: GPL3
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'
 
 extra:
   recipe-maintainers:
-    - johanneskoester
-    - bgruening
-    - daler
-    - jdblischak
-    - cbrueffer
     - ccwang002
+    - conda-forge/r
+
+# Package: merTools
+# Title: Tools for Analyzing Mixed Effect Regression Models
+# Version: 0.5.0
+# Authors@R: c( person(c("Jared", "E."), "Knowles", email = "jknowles@gmail.com", role = c("aut", "cre")), person("Carl", "Frederick", email="carlbfrederick@gmail.com", role = c("aut")), person("Alex", "Whitworth", email="whitworth.alex@gmail.com", role = c("ctb")))
+# Description: Provides methods for extracting results from mixed-effect model objects fit with the 'lme4' package. Allows construction of prediction intervals efficiently from large scale linear and generalized linear mixed-effects models.
+# Depends: R (>= 3.0.2), arm, lme4 (>= 1.1-11), methods
+# Suggests: testthat, knitr, rmarkdown, parallel, nlme, future.apply, rstanarm, Amelia, DT
+# Imports: dplyr, mvtnorm, foreach, shiny, abind, ggplot2, blme, broom,
+# License: GPL (>= 2)
+# LazyData: true
+# VignetteBuilder: knitr
+# RoxygenNote: 6.1.1
+# Encoding: UTF-8
+# BugReports: https://www.github.com/jknowles/merTools
+# NeedsCompilation: no
+# Packaged: 2019-05-13 00:52:24 UTC; jknow
+# Author: Jared E. Knowles [aut, cre], Carl Frederick [aut], Alex Whitworth [ctb]
+# Maintainer: Jared E. Knowles <jknowles@gmail.com>
+# Repository: CRAN
+# Date/Publication: 2019-05-13 12:30:06 UTC
